app/medical-sensors-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: medical-sensors-service
spec:
  selector:
    app: medical-sensors
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30080
