app/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: medical-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "medical.local"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: medical-app
spec:
  hosts:
    - "medical.local"
  gateways:
    - medical-gateway
  http:
    - match:
        - uri:
            prefix: /api/hello
      route:
        - destination:
            host: medical-backend
            port:
              number: 80
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: medical-sensors
            port:
              number: 80
